--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 main {
+  flex-grow: 1;
   background-color: rgba(0, 0, 0, .1);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
