--- a/src/app/portal/home/home.component.html
+++ b/src/app/portal/home/home.component.html
@@ -1,16 +1,16 @@
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row align-items-center g-5 p-3 pb-5 pr-1 my-0 rounded-3 border shadow-lg bg-light">
-        <div class="col-md-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Social Media</h1>
+    <div class="row flex-lg-row align-items-center g-5 p-3 my-0 rounded-3 border shadow-lg bg-light">
+        <div class="col-md-6 my-3">
+            <h1 class="display-5 fw-bold lh-1 mb-4">Social Media</h1>
             <p class="lead">
                 A demo project for social media made in Bootstrap 5 from the scratch using Java and Javacript. 
                 FrontEnd is in Angular 12 and BackEnd is powered by Spring Boot.
             </p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start py-3">
                 <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</button>
             </div>
         </div>
-        <div class="col-10 col-sm-8 col-md-6">
+        <div class="col-10 col-sm-8 col-md-6 my-3">
           <img src="/assets/images/social-media-1.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
     </div>
