--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="p-3">
+<header class="p-3 border-bottom">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">      
@@ -11,7 +11,7 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li *ngFor="let nav of navigation">
-                <a href="{{nav.url}}" class="nav-link px-2 link-dark">{{nav.title}}</a>
+                <a routerLink="{{nav.url}}" class="nav-link px-2 link-dark">{{nav.title}}</a>
             </li>
         </ul>
 
