--- a/src/app/portal/contact/contact.component.html
+++ b/src/app/portal/contact/contact.component.html
@@ -21,19 +21,19 @@
                 <div class="row g-3">
                     <div class="col-sm-6">
                         <label for="firstName" class="form-label">First name<span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="firstName" placeholder="Your First Name" required>
+                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Your First Name" required>
                     </div>
                     <div class="col-sm-6">
                         <label for="lastName" class="form-label">Last name</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Your Last Name">
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Your Last Name">
                     </div>
                     <div class="col-12">
                         <label for="email" class="form-label required">Email<span class="text-danger">*</span></label>
-                        <input type="email" class="form-control" id="email" placeholder="Your Email (you@example.com)" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email (you@example.com)" required>
                     </div>
                     <div class="col-12">
                         <label for="message" class="form-label required">Message<span class="text-danger">*</span></label>
-                        <textarea type="message" class="form-control" id="message" placeholder="Type your message" required></textarea>
+                        <textarea type="message" class="form-control" id="message" name="message" placeholder="Type your message" required></textarea>
                     </div>
                 </div>
                 <hr class="my-2">
