--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main class="d-flex align-items-center justify-content-center">
+<main>
   <router-outlet></router-outlet>
 </main>
 
