--- a/src/app/portal/about/about.component.html
+++ b/src/app/portal/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-row-reverse align-items-center g-5 p-3 my-0 rounded-3 border shadow-lg bg-light">
+    <div class="row flex-row-reverse align-items-center g-5 p-3 my-0 rounded-3 border shadow-lg bg-white">
         <div class="col-12 col-md-6 my-md-0 ps-md-0 my-1">
             <img src="/assets/images/beshambher.jpg" class="mx-auto img-fluid" alt="Beshambher" loading="lazy">
         </div>
