--- a/src/app/portal/contact/contact.component.html
+++ b/src/app/portal/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-lg-row g-5 p-3 my-0 rounded-3 border shadow-lg bg-light">
+    <div class="row flex-lg-row g-5 p-3 my-0 rounded-3 border shadow-lg bg-white">
         <div class="col-md-6 my-3">
             <h1 class="display-5 fw-bold lh-1 mb-4">Contact Me</h1>
             <p class="lead">
