--- a/src/app/portal/home/home.component.html
+++ b/src/app/portal/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="row flex-row-reverse align-items-center g-5 p-3 my-0 rounded-3 border shadow-lg bg-light">
+    <div class="row flex-row-reverse align-items-center g-5 p-3 my-0 rounded-3 border shadow-lg bg-white">
         <div class="col-12 col-md-6 my-md-0 ps-md-0 my-1">
             <img src="/assets/images/social-media-1.jpg" class="d-block mx-lg-auto img-fluid" alt="Social Media" width="700" height="500" loading="lazy">
         </div>
         <div class="col-md-6 my-3">
             <h1 class="display-5 fw-bold lh-1 mb-4">Social Media</h1>
             <p class="lead">
-                "{{quote}}" -{{author}}
+                "{{quote}}" <cite class="blockquote-footer" title="{{author}}">{{author}}</cite>
             </p>
             <p class="lead">
                Social Media: a place to connect with the people you know and share the happiness as the bond grow.
