--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="border-top">
+<footer class="bg-white border-top">
     <div class="container d-flex flex-wrap justify-content-between align-items-center py-3">
         <p class="col-md-4 mb-0 text-muted">© 2021 Beshambher</p>
 
