--- a/src/app/social/middle/feed/feed.component.html
+++ b/src/app/social/middle/feed/feed.component.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
         </ng-container>
+        <div class="mt-2"></div>
     </div>
     <div class="col-md-3">
         <app-right-sidebar></app-right-sidebar>
