Updated configurations for cors and api base url from env

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
             <img
                 width="40"
                 alt="Angular Logo"
-                src="/assets/images/logo.png"
+                src="./assets/images/logo.png"
             />
         </a>
 
