Changed base href and api url for new deployment within spring boot app

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,7 +33,7 @@
                         <li><hr class="dropdown-divider"></li>
                     </ng-container>
                     <li>
-                        <form action="/social/logout" method="post">
+                        <form action="{{api.logout}}" method="post">
                             <button type="submit" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign out</button>
                         </form>
                     </li>
