--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -47,8 +47,9 @@
                     <i class="fas fa-user"></i> Sign In
                 </a>
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                    <li><a class="dropdown-item" href="{{api.loginGithub}}"><i class="fab fa-github"></i> GitHub</a></li>
-                    <li><a class="dropdown-item" href="{{api.loginGoogle}}"><i class="fab fa-google"></i> Google</a></li>
+                    <li *ngFor="let login of loginOptions">
+                        <a class="dropdown-item" href="{{login.url}}"><i class="{{login.icon}}"></i> {{login.title}}</a>
+                    </li>
                 </ul>
             </div>
         </ng-template>
