--- a/src/app/social/middle/feed/feed.component.html
+++ b/src/app/social/middle/feed/feed.component.html
@@ -10,7 +10,7 @@
                         <textarea formControlName="body" class="form-control h-auto" placeholder="Something's on your mind?" id="postarea" rows="3"></textarea>
                         <label for="postarea">Something's on your mind?</label>
                     </div>
-                    <button type="button" class="btn btn-primary mt-2" [disabled]="!postForm.valid" (click)="postStatus()">
+                    <button type="button" class="btn btn-sm btn-primary mt-2" [disabled]="!postForm.valid" (click)="postStatus()">
                         <i class="fas fa-pencil-alt"></i> Post
                     </button>
                 </form>
@@ -22,18 +22,75 @@
                     <div class="col-2 p-1 p-md-2">
                         <img [src]="post.user.avatar" class="img-thumbnail rounded-circle border-0" alt="{{post.user.username}}"/>
                     </div>
-                    <div class="col-8 my-auto">
+                    <div class="col-9 my-auto">
                         <h6 class="mb-0">{{post.user.username}}</h6>
                         <small class="text-muted">{{post.createdAt | date:'MMM d, y, h:mm a'}}</small>
                     </div>
+                    <div class="col-1 my-auto" *ngIf="user.username==post.user.username">
+                        <div class="dropdown">
+                            <button class="btn btn-sm dropdown-toggle" type="button" id="dropdownMenu2" 
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                            </button>
+                            <ul class="dropdown-menu rounded-3 shadow mw-unset" aria-labelledby="dropdownMenu2">
+                              <li>
+                                  <button class="dropdown-item btn-sm" type="button" (click)="editPost(post)"><i class="fas fa-pencil-alt"></i> Edit</button>
+                              </li>
+                              <li>
+                                <button class="dropdown-item btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#deleteModal" [attr.data-bs-id]="post.id">
+                                    <i class="fas fa-trash text-danger"></i> Delete
+                                </button>
+                              </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body pt-2">
-                    <p class="card-text">{{post.body}}</p>
-                    <a href="#" class="btn btn-primary me-2"><i class="fas fa-thumbs-up"></i> Like ({{post.likes}})</a>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-comment"></i> Comment ({{post.commentsCount}})</a>
+                    <p *ngIf="editPostId!=post.id; else editPostFormBlock" class="card-text">{{post.body}}</p>
+                    <ng-template #editPostFormBlock>
+                        <form [formGroup]="editPostForm">
+                            <div class="form-floating">
+                                <textarea formControlName="body" class="form-control h-auto" placeholder="You can't leave it empty!" id="editpostarea" rows="3"></textarea>
+                                <label for="editpostarea" [hidden]="!editPostForm.valid">Edit post</label>
+                                <label for="editpostarea" [hidden]="editPostForm.valid">You can't leave it empty!</label>
+                            </div>
+                            <button type="button" class="btn btn-sm btn-primary my-2" [disabled]="!editPostForm.valid" (click)="editPostStatus(post.id)">
+                                <i class="fas fa-pencil-alt"></i> Update
+                            </button>
+                            <button type="button" class="btn btn-sm btn-secondary m-2" (click)="editPostId=''">
+                                <i class="fas fa-times"></i> Cancel
+                            </button>
+                        </form>
+                    </ng-template>
+                    <button class="btn btn-sm btn-primary me-2" (click)="togglePostLike(post.id)"><i class="fas fa-thumbs-up"></i> Like</button>
+                    <button class="btn btn-sm btn-primary disabled"><i class="fas fa-comment"></i> Comment</button>
+                    <div class="text-muted d-inline float-end">
+                        <small class="me-1">{{post.likes | itos}} like{{post.likes==1?'':'s'}}</small>
+                        <small>{{post.commentsCount | itos}} comment{{post.commentsCount==1?'':'s'}}</small>
+                    </div>
                 </div>
             </div>
         </ng-container>
+        <!-- virtual infinit pagination -->
+        <small class="d-block text-center mt-1" *ngIf="posts && !posts.last" >
+            <button class="btn btn-sm btn-outline-primary" (click)="loadMore()">See More Posts</button>
+        </small>
+        <!-- delete confirm modal -->
+        <div class="modal" id="deleteModal" tabindex="-1" role="dialog" (show.bs.modal)="deletePost($event)">
+            <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
+                <div class="modal-content rounded-4 shadow">
+                    <div class="modal-body py-3 px-4 text-center">
+                      <h5 class="mb-2">Delete?</h5>
+                      <p class="mb-0">Are you sure you want to this post?</p>
+                    </div>
+                    <div class="modal-footer flex-nowrap p-0">
+                      <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none text-danger col-6 m-0 rounded-0 border-end" data-bs-dismiss="modal" (click)="deletePostStatus()">
+                          <strong>Yes, delete</strong>
+                        </button>
+                      <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 m-0 rounded-0" data-bs-dismiss="modal">No cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="mt-2"></div>
     </div>
     <div class="col-md-3">
