--- a/src/app/social/middle/partials/comment/comment.component.html
+++ b/src/app/social/middle/partials/comment/comment.component.html
@@ -1,6 +1,6 @@
-<div class="card my-2">
+<div class="card d-block my-2">
     <div class="card-body">
-        <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion accordion-flush mb-2" id="accordionFlushExample">
             <div class="accordion-item">
                 <div class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed p-2" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -17,9 +17,35 @@
 
             <div class="py-2 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between">
-                    <strong class="text-gray-dark">{{comment.user.firstName}} {{comment.user.lastName}}</strong>
+                    <div class="my-auto">
+                        <strong class="text-gray-dark">{{comment.user.firstName}} {{comment.user.lastName}}</strong>
+                        <br/>
+                        <small class="small text-muted">{{comment.createdAt | date:'MMM d, y, h:mm a'}}</small>
+                    </div>
+                    <div class="my-auto" *ngIf="user.username==comment.user.username">
+                        <div class="dropdown">
+                            <button class="btn btn-sm dropdown-toggle" type="button" id="dropdownMenu2" 
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                            </button>
+                            <ul class="dropdown-menu rounded-3 shadow mw-unset" aria-labelledby="dropdownMenu2">
+                              <li>
+                                  <button class="dropdown-item btn-sm" type="button" (click)="editComment(comment)"><i class="fas fa-pencil-alt"></i> Edit</button>
+                              </li>
+                              <li>
+                                <button class="dropdown-item btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#deleteCommentModal" [attr.data-bs-id]="comment.id">
+                                    <i class="fas fa-trash text-danger"></i> Delete
+                                </button>
+                              </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <p class="my-1">{{comment.comment}}</p>
+                <div class="my-1">
+                    <p *ngIf="editCommentId!=comment.id; else editCommentFormBlock" class="card-text">{{comment.comment}}</p>
+                    <ng-template #editCommentFormBlock>
+                        <app-text-area [editForm]="editCommentForm" [editFormData]="editCommentFormData" (update)="editPostComment($event, comment.id)" (cancel)="editCommentId=''"></app-text-area>
+                    </ng-template>
+                </div>
             </div>
         </div>
         <div class="d-flex" *ngIf="!comments || !comments.content.length">
@@ -32,3 +58,6 @@
         </small>
     </div>
 </div>
+
+<!-- delete confirm modal -->
+<app-delete-modal [deleteData]="{id: 'deleteCommentModal', item: 'comment'}" (showBsModal)="deleteComment($event)" (delete)="deletePostComment()"></app-delete-modal>
