--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,17 +1,21 @@
 <footer class="bg-white border-top">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center py-3">
-        <p class="col-md-4 mb-0 text-muted">© 2021 Beshambher</p>
+  <div class="container d-flex flex-wrap justify-content-between align-items-center py-3">
+    <p class="col-md-4 mb-0 text-muted">© 2021 Beshambher</p>
 
-        <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
-            <li *ngFor="let s of social" class="ms-3 h4">
-                <a class="text-muted" href="{{s.url}}" target="_blank"><i class="{{s.icon}}"></i></a>
-            </li>
-        </ul>
+    <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
+      @for (s of social; track s) {
+        <li class="ms-3 h4">
+          <a class="text-muted" href="{{s.url}}" target="_blank"><i class="{{s.icon}}"></i></a>
+        </li>
+      }
+    </ul>
 
-        <ul class="nav col-md-4 justify-content-end">
-            <li *ngFor="let nav of navigation" class="nav-item">
-                <a routerLink="{{nav.url}}" class="nav-link px-2 text-muted">{{nav.title}}</a>
-            </li>
-        </ul>
-    </div>
+    <ul class="nav col-md-4 justify-content-end">
+      @for (nav of navigation; track nav) {
+        <li class="nav-item">
+          <a routerLink="{{nav.url}}" class="nav-link px-2 text-muted">{{nav.title}}</a>
+        </li>
+      }
+    </ul>
+  </div>
 </footer>
