--- a/src/app/social/middle/feed/feed.component.html
+++ b/src/app/social/middle/feed/feed.component.html
@@ -1,42 +1,42 @@
 <div class="row">
-    <div class="col-md-3">
-        <app-left-sidebar></app-left-sidebar>
+  <div class="col-md-3">
+    <app-left-sidebar></app-left-sidebar>
+  </div>
+  <div class="col-md-6">
+    <div class="card rounded-3 border shadow-lg">
+      <div class="card-body">
+        <form [formGroup]="postForm">
+          <div class="form-floating">
+            <textarea formControlName="body" class="form-control h-auto" placeholder="Something's on your mind?" id="postarea" rows="3"></textarea>
+            <label for="postarea">Something's on your mind?</label>
+          </div>
+          <button type="button" class="btn btn-primary mt-2" [disabled]="!postForm.valid" (click)="postStatus()">
+            <i class="fas fa-pencil-alt"></i> Post
+          </button>
+        </form>
+      </div>
     </div>
-    <div class="col-md-6">
-        <div class="card rounded-3 border shadow-lg">
-            <div class="card-body">
-                <form [formGroup]="postForm">
-                    <div class="form-floating">
-                        <textarea formControlName="body" class="form-control h-auto" placeholder="Something's on your mind?" id="postarea" rows="3"></textarea>
-                        <label for="postarea">Something's on your mind?</label>
-                    </div>
-                    <button type="button" class="btn btn-primary mt-2" [disabled]="!postForm.valid" (click)="postStatus()">
-                        <i class="fas fa-pencil-alt"></i> Post
-                    </button>
-                </form>
-            </div>
+    @for (post of posts.content; track post) {
+      <div class="card mt-2 rounded-3 border shadow-lg">
+        <div class="row g-0">
+          <div class="col-2 p-1 p-md-2">
+            <img [src]="post.user.avatar" class="img-thumbnail rounded-circle border-0" alt="{{post.user.username}}"/>
+          </div>
+          <div class="col-8 my-auto">
+            <h6 class="mb-0">{{post.user.username}}</h6>
+            <small class="text-muted">{{post.createdAt | date:'MMM d, y, h:mm a'}}</small>
+          </div>
         </div>
-        <ng-container *ngFor="let post of posts.content">
-            <div class="card mt-2 rounded-3 border shadow-lg">
-                <div class="row g-0">
-                    <div class="col-2 p-1 p-md-2">
-                        <img [src]="post.user.avatar" class="img-thumbnail rounded-circle border-0" alt="{{post.user.username}}"/>
-                    </div>
-                    <div class="col-8 my-auto">
-                        <h6 class="mb-0">{{post.user.username}}</h6>
-                        <small class="text-muted">{{post.createdAt | date:'MMM d, y, h:mm a'}}</small>
-                    </div>
-                </div>
-                <div class="card-body pt-2">
-                    <p class="card-text">{{post.body}}</p>
-                    <a href="#" class="btn btn-primary me-2"><i class="fas fa-thumbs-up"></i> Like ({{post.likes}})</a>
-                    <a href="#" class="btn btn-primary"><i class="fas fa-comment"></i> Comment ({{post.commentsCount}})</a>
-                </div>
-            </div>
-        </ng-container>
-        <div class="mt-2"></div>
-    </div>
-    <div class="col-md-3">
-        <app-right-sidebar></app-right-sidebar>
-    </div>
+        <div class="card-body pt-2">
+          <p class="card-text">{{post.body}}</p>
+          <a href="#" class="btn btn-primary me-2"><i class="fas fa-thumbs-up"></i> Like ({{post.likes}})</a>
+          <a href="#" class="btn btn-primary"><i class="fas fa-comment"></i> Comment ({{post.commentsCount}})</a>
+        </div>
+      </div>
+    }
+    <div class="mt-2"></div>
+  </div>
+  <div class="col-md-3">
+    <app-right-sidebar></app-right-sidebar>
+  </div>
 </div>
