Fixed api urls in headers and contact us texts

--- a/src/app/portal/about/about.component.html
+++ b/src/app/portal/about/about.component.html
@@ -7,7 +7,7 @@
       <h1 class="display-5 fw-bold lh-1 mb-3">About</h1>
       <p class="lead">
         Hi there! <br>
-        I'm Beshambher Chaukhwan, a full stack developer from India who is curious about the virtual world of computers.
+        I'm Besh, a full stack developer from Germany who is curious about the virtual world of computers.
         I am passionate about software development. I am a skilled Backend and Frontend Developer having experience of developing enterprise level applications.
       </p>
 
