--- a/src/app/portal/contact/contact.component.html
+++ b/src/app/portal/contact/contact.component.html
@@ -2,17 +2,17 @@
     <div class="row flex-lg-row g-5 p-3 my-0 rounded-3 border shadow-lg bg-white">
         <div class="col-md-6 my-3">
             <h1 class="display-5 fw-bold lh-1 mb-4">Contact Me</h1>
-            <p class="lead">
-                <strong>What is Social Media?</strong> <br>
-                It's a demo project for social media made in Bootstrap 5 from the scratch using Java and Javacript. 
-                FrontEnd is in Angular 12 and BackEnd is powered by Spring Boot.
+            <h6>What is Social Media?</h6>
+            <p class="opacity-75">
+                It's a demo project for social media made in Bootstrap 5 from the scratch using Java and JavaScript.
+                FrontEnd is in Angular v20 and BackEnd is powered by Java Spring Boot v3.
             </p>
-            <p class="lead">
-                <strong>Does it work?</strong> <br>
+            <h6>Does it work?</h6>
+            <p class="opacity-75">
                 Of course it does :) and if there's something that looks out of place do let me know.
             </p>
-            <p class="lead">
-                <strong>How to reach me?</strong> <br>
+            <h6>How to reach me?</h6>
+            <p class="opacity-75">
                 Just drop me a message:
             </p>
         </div>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-12">
                         <label for="message" class="form-label required">Message<span class="text-danger">*</span></label>
-                        <textarea type="message" class="form-control" id="message" name="message" placeholder="Type your message" required></textarea>
+                        <textarea class="form-control" id="message" name="message" placeholder="Type your message" required></textarea>
                     </div>
                 </div>
                 <hr class="my-2">
