--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -31,11 +31,11 @@
             <li><a class="dropdown-item" href="#"><i class="fas fa-user-circle"></i> Profile</a></li>
             <li><hr class="dropdown-divider"></li>
             @if (authService.isAdmin) {
-              <li><a class="dropdown-item" href="/social/swagger-ui/"><i class="fas fa-book"></i> Swagger API Docs</a></li>
+              <li><a class="dropdown-item" href="{{api.swagger}}"><i class="fas fa-book"></i> Swagger API Docs</a></li>
               <li><hr class="dropdown-divider"></li>
             }
             <li>
-              <form action="/social/logout" method="post">
+              <form action="{{api.logout}}" method="post">
                 <button type="submit" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign out</button>
               </form>
             </li>
@@ -47,8 +47,8 @@
             <i class="fas fa-user"></i> Sign In
           </a>
           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-            <li><a class="dropdown-item" href="/social/oauth2/authorization/github"><i class="fab fa-github"></i> GitHub</a></li>
-            <li><a class="dropdown-item" href="/social/oauth2/authorization/google"><i class="fab fa-google"></i> Google</a></li>
+            <li><a class="dropdown-item" href="{{api.github}}"><i class="fab fa-github"></i> GitHub</a></li>
+            <li><a class="dropdown-item" href="{{api.google}}"><i class="fab fa-google"></i> Google</a></li>
           </ul>
         </div>
       }
