--- a/src/app/social/middle/feed/feed.component.html
+++ b/src/app/social/middle/feed/feed.component.html
@@ -16,23 +16,8 @@
         </form>
       </div>
     </div>
-    @for (post of posts.content; track post) {
-      <div class="card mt-2 rounded-3 border shadow-lg">
-        <div class="row g-0">
-          <div class="col-2 p-1 p-md-2">
-            <img [src]="post.user.avatar" class="img-thumbnail rounded-circle border-0" alt="{{post.user.username}}"/>
-          </div>
-          <div class="col-8 my-auto">
-            <h6 class="mb-0">{{post.user.username}}</h6>
-            <small class="text-muted">{{post.createdAt | date:'MMM d, y, h:mm a'}}</small>
-          </div>
-        </div>
-        <div class="card-body pt-2">
-          <p class="card-text">{{post.body}}</p>
-          <a href="#" class="btn btn-primary me-2"><i class="fas fa-thumbs-up"></i> Like ({{post.likes}})</a>
-          <a href="#" class="btn btn-primary"><i class="fas fa-comment"></i> Comment ({{post.commentsCount}})</a>
-        </div>
-      </div>
+    @for (post of posts.content; track post.id) {
+      <app-post [post]="post"></app-post>
     }
     <div class="mt-2"></div>
   </div>
