--- a/src/app/portal/home/home.component.html
+++ b/src/app/portal/home/home.component.html
@@ -12,7 +12,7 @@
                Social Media: a place to connect with the people you know and share the happiness as the bond grow.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start py-3">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</button>
+                <a href="/" class="btn btn-primary btn-lg px-4 me-md-2">Get Started</a>
             </div>
         </div>
     </div>
