--- a/src/app/social/right/right-sidebar/right-sidebar.component.html
+++ b/src/app/social/right/right-sidebar/right-sidebar.component.html
@@ -6,12 +6,14 @@
         <img [src]="user.avatar" class="me-3 rounded-circle border-0" width="48" height="48" alt="{{user.username}}" />
         <div class="py-2 mb-0 small lh-sm border-bottom w-100">
           <div class="d-flex justify-content-between">
-            <strong class="text-gray-dark">{{user.firstName}} {{user.lastName}}</strong>
-            <a routerLink="#" class="text-decoration-none" (click)="followUser(user.username)">
+            <div class="text-truncate">
+                <strong class="text-gray-dark">{{user.firstName}} {{user.lastName}}</strong>
+                <span class="text-muted d-block">{{user.username}}</span>
+            </div>
+            <a routerLink="#" class="text-decoration-none my-auto" (click)="followUser(user.username)">
               <i class="fas fa-shoe-prints"></i> Follow
             </a>
           </div>
-          <span class="text-muted d-block">{{user.username}}</span>
         </div>
       </div>
     }
