Added post delete feature with confirm popup

--- a/src/app/social/middle/feed/feed.component.html
+++ b/src/app/social/middle/feed/feed.component.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     @for (post of posts.content; track post.id) {
-      <app-post [post]="post"></app-post>
+      <app-post [post]="post" (postDeleted)="onPostDeleted($event)"></app-post>
     }
     <div class="mt-2"></div>
   </div>
