Added toast messages in add post

--- a/src/app/social/middle/feed/feed.component.html
+++ b/src/app/social/middle/feed/feed.component.html
@@ -11,7 +11,7 @@
                       id="post-area" rows="3" maxlength="4096"></textarea>
             <label for="post-area">Something's on your mind?</label>
           </div>
-          <button type="button" class="btn btn-primary mt-2 d-flex ms-auto" [disabled]="!postForm.valid" (click)="addPost()">
+          <button type="button" class="btn btn-primary mt-2 float-end" [disabled]="!postForm.valid" (click)="addPost()">
             <i class="fas fa-pencil-alt"></i> Post
           </button>
         </form>
